@@ -10,6 +10,16 @@
         booktitle = "NASA CR-2232",
         year = 1973,
         }
+@article{aip:1998:peterson,
+  title={Dissociative recombination and excitation of N 2+: Cross sections and product branching ratios},
+  author={Peterson, JR and Le Padellec, A and Danared, H and Dunn, GH and Larsson, M and Larson, A and Peverall, R and Str{\"o}mholm, C and Ros{\'e}n, S and Af Ugglas, M and others},
+  journal={The Journal of chemical physics},
+  volume={108},
+  number={5},
+  pages={1978--1988},
+  year={1998},
+  publisher={American Institute of Physics}
+}
 @article{pf:2007:boyd,
 	Author = {Boyd,Iain D.},
 	Date-Added = {2020-07-29 14:25:18 -0700},
@@ -23,6 +33,16 @@
 	Url = {https://doi.org/10.1063/1.2771662},
 	Volume = {19},
 	Year = {2007}
+}
+@article{aip:1986:itikawa,
+  title={Cross sections for collisions of electrons and photons with nitrogen molecules},
+  author={Itikawa, Yukikazu and Hayashi, M and Ichimura, A and Onda, K and Sakimoto, K and Takayanagi, K and Nakamura, M and Nishimura, H and Takayanagi, T},
+  journal={Journal of physical and chemical reference data},
+  volume={15},
+  number={3},
+  pages={985--1010},
+  year={1986},
+  publisher={American Institute of Physics for the National Institute of Standards and~…}
 }
 @book{book:1990:park,
         author = "Park, C.",
